--- a/pantry-tracker/package.json
+++ b/pantry-tracker/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.6",
+    "@mui/x-data-grid": "^7.12.0",
+    "@nextui-org/react": "^2.4.6",
+    "@nextui-org/table": "^2.0.39",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.4",
+    "framer-motion": "^11.3.21",
+    "lucide-react": "^0.419.0",
+    "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
